# TICECMakeTemplate

./: CMakeLists.txt  README.md  makefile
src/: main.c
